--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,15 @@ version = '0.1'
 repositories {
 	mavenLocal()
     jcenter()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
 	compile	gradleApi()
 	compile localGroovy()
+	compile 'com.moowork.gradle:gradle-node-plugin:1.2.0'
 }
 ext {
 	artifactId = 'karma-db'
@@ -27,3 +31,4 @@ publishing {
         }
     }
 }
+
