--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	compile	gradleApi()
 	compile localGroovy()
 	compile 'com.moowork.gradle:gradle-node-plugin:1.2.0'
+	testCompile 'org.spockframework:spock-core:1.2-groovy-2.4'
+	testCompile 'org.assertj:assertj-core:3.11.1'
 }
 ext {
 	artifactId = 'karma-db'
